Composer: Fix active voice recording button color on mobile (#2895)

--- a/src/components/middle/composer/Composer.scss
+++ b/src/components/middle/composer/Composer.scss
@@ -68,11 +68,23 @@
       position: absolute;
     }
 
-    &:not(:active):not(:focus):not(:hover) {
-      .icon-send,
-      .icon-schedule,
-      .icon-check {
-        color: var(--color-primary);
+    @media (hover: hover) {
+      &:not(:active):not(:focus):not(:hover) {
+        .icon-send,
+        .icon-schedule,
+        .icon-check {
+          color: var(--color-primary);
+        }
+      }
+    }
+
+    @media (hover: none) {
+      &:not(:active):not(:focus) {
+        .icon-send,
+        .icon-schedule,
+        .icon-check {
+          color: var(--color-primary);
+        }
       }
     }
 
